--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "@ph4re/blink",
+  "name": "@pharos-lab/blink",
   "private": false,
   "version": "0.1.0",
   "type": "module",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "main": "./dist/blink.umd.cjs",
   "module": "./dist/blink.js",
   "exports": {
